[package]

name = "interval-heap"
version = "0.0.5"
license = "MIT/Apache-2.0"
description = "A double-ended priority queue implemented with an interval heap"
authors = [
    "Andrew Paseltiner <apaseltiner@gmail.com>",
    "Sebastian Gesemann <s.gesemann@gmail.com>",
]

repository = "https://github.com/contain-rs/interval-heap"
homepage = "https://github.com/contain-rs/interval-heap"
documentation = "https://contain-rs.github.io/interval-heap/interval_heap"
keywords = ["data-structures"]
readme = "README.md"

[features]
drain = []

[dependencies]
compare = "0.0.6"

[dev-dependencies]
rand = "0.3"
